cabal-version:      3.0
name:               time-to-event
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             David Pritchard
maintainer:         david.al.pritchard@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

-- `ExplicitNamespaces` is added to correct the minor inconsistency mentioned at
-- https://ghc.gitlab.haskell.org/ghc/doc/users_guide/exts/control.html#extension-GHC2021
common extensions
    default-extensions:
        ExplicitNamespaces
        OverloadedRecordDot
        OverloadedStrings

common language
    default-language: GHC2021

library
    import:           
      warnings
      , extensions
      , language
    exposed-modules:
        CoxPH
      , CoxPH.CenterAndScale
      , CoxPH.CoxPHUpdateNewtonRaphson
      , CoxPH.Data
      , CoxPH.OrderByStrata
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >= 4.14
      , hmatrix ^>= 0.20
      , text >= 2
      , vector ^>= 0.13
      , vector-algorithms ^>= 0.9
    hs-source-dirs:   src
    default-language: GHC2021

test-suite time-to-event-test
    import:           
      warnings
      , extensions
      , language
    other-modules:
        TestCoxPH.TestCoxPHUpdateNewtonRaphson
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestCoxPH.hs
    build-depends:
        HUnit-approx
      , base >= 4.14
      , hmatrix ^>= 0.20
      , tasty
      , tasty-hunit
      , text >= 2
      , time-to-event
      , vector ^>= 0.13

benchmark time-to-event-bench
    import:           
      warnings
      , extensions
      , language
    type: exitcode-stdio-1.0
    main-is: Main.hs

    build-depends:    
      base >=4.14
      , bytestring
      , cassava
      , tasty-bench
      , text
      , time-to-event
      , vector
    hs-source-dirs:   bench
